tests/paczka1/small_fuzzy/42761239.err
Error in line 2: Ddi A73 85,4
Error in line 6: JdU9NuI A73 23,3
